# nanoGPT-Modern

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENT_CHECKLIST.md  IMPROVEMENT_REPORT.md  LICENSE  README.md  api_server.py  docker-compose.yml  export_gguf.py  export_to_hf.py  export_to_onnx.py  generate_experiment_log.py  load_from_hf.py  logs_prepare.txt  profile_inference.py  profile_training.py  pyproject.toml  requirements.txt  run_ablations.py  run_full_evaluation.py  run_inference_ablation.py
.github/workflows/: ci.yml
config/: generate.yaml  grpo.yaml  pretrain.yaml  sft.yaml
config/hydra/: dpo.yaml  eval_benchmark.yaml  generate.yaml  grpo.yaml  pretrain.yaml  sft.yaml
data/: arithmetic.py  chat_templates.py  code.py  dedup.py  filter.py  mixer.py  multilingual.py  openwebtext.py  prepare.py  quality_filter.py  validate.py
docs/: CHANGELOG.md  EXPERIMENTS.md  TECH_REPORT.md
docs/adr/: README.md  adr-001-gqa-grouped-broadcast.md  adr-002-grpo-vs-ppo.md  adr-003-pytorch-vs-jax.md  adr-004-kv-cache-quantization.md  (+2 more)
evaluation/: benchmark_suite.py  eval_alignment.py  eval_benchmark.py  eval_benchmark_hydra.py  eval_win_rate.py  needle_in_haystack.py
inference/: continuous_batching.py  generate.py  generate_hydra.py  generate_utils.py  visualize_attention.py
model/: __init__.py  attention_utils.py  baseline_gpt.py  flash_attention.py  gguf_utils.py  hf_model.py  kv_cache_utils.py  modern_gpt.py  paged_kv_cache.py  quantization.py  ring_attention.py
rewards/: rule_reward.py
tests/: __init__.py  test_attention_utils.py  test_bugfixes.py  test_config.py  test_data_quality.py  test_determinism.py  test_dpo_trainer.py  test_dpo_utils.py  test_flash_attention.py  test_generate_compile.py  test_gguf_export.py  test_gqa_broadcast.py  test_gradient_checkpointing.py  test_grpo.py  test_grpo_advantage.py  test_hf_compat.py  test_hydra_config.py  test_kv_cache_benchmark.py  test_logger.py  test_lr_scheduler.py  test_memory_leak.py  test_moe_load_balance.py  test_mtp.py  test_mypy.py  test_packing.py  test_paged_kv_cache.py  test_prompt_templates.py  test_qk_norm.py  test_quantization.py  test_ring_attention.py  test_rl_utils.py  test_rope_ntk.py  test_sliding_window.py  test_speculative_decode.py  test_trainer_base.py
training/: iterative_grpo.py  iterative_grpo_hydra.py  train_dpo.py  train_dpo_hydra.py  train_grpo.py  train_grpo_hydra.py  train_pretrain.py  train_pretrain_hydra.py  train_sft.py  train_sft_hydra.py  trainer_base.py
utils/: checkpoint.py  config.py  config_models.py  dpo_utils.py  hydra_utils.py  logging.py  lr_scheduler.py  monitoring.py  profiler.py  rl_utils.py
(+5 files in other folders)
